# aa-player

./: Cargo.toml  build.rs
pki/: ca_cert.pem  cert.pem  key.pem
src/: control_channel_packets.rs  encryption.rs  frame.rs  main.rs  packet.rs  packet_router.rs  packet_types.rs  protos.proto  usb.rs
src/service/: audio_renderer.rs  audio_source.rs  input_service.rs  input_source.rs  media_sink.rs  mod.rs  video_renderer.rs
src/service/gst_custom_app_src/: imp.rs  mod.rs
src/service/gst_input_event_tap/: imp.rs  mod.rs
