[package]
name = "aa_player"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-util = { version = "0.7.15" }
tokio = { version = "1", features = ["full"] }
nusb = "0.1.14"
futures = "0.3.31"
byteorder = "1.5.0"
rustls = "=0.23.27"
rustls-webpki ="=0.103.2"
log = "0.4.27"
simple_logger = "5.0.0"
prost = "0.14.1"
cpal = "0.16.0"
gstreamer = "0.24.0"
gstreamer-app = "0.24.0"
gstreamer-video = "0.24.0"
gstreamer-base = "0.24.0"
glib="0.21.0"
lazy_static = "1.5.0"

[patch.crates-io]
rustls-webpki = {git = "https://github.com/uglyoldbob/webpki.git"}

[build-dependencies]
prost-build = "0.14.1"
